--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "get:name": "echo $npm_package_name",
     "generate:assets": "npm run build",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
-    "release": "semantic-release",
+    "release": "semantic-release"
   },
   "repository": {
     "type": "git",
