--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
-    "test": "echo \"No test specified\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
+    "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "get:version": "echo $npm_package_version",
     "get:name": "echo $npm_package_name",
     "generate:assets": "npm run build",
@@ -29,16 +31,19 @@
     "url": "https://github.com/asyncapi/diff/issues"
   },
   "homepage": "https://github.com/asyncapi/diff#readme",
+  "dependencies": {
+    "@asyncapi/parser": "^1.5.1"
+  },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "conventional-changelog-conventionalcommits": "^4.5.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "eslint": "^7.28.0",
     "eslint-plugin-github": "^4.1.3",
     "eslint-plugin-security": "^1.4.0",
