--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/asyncapi/diff#readme",
   "dependencies": {
-    "@asyncapi/parser": "^1.5.1"
+    "@asyncapi/parser": "^1.5.1",
+    "fast-json-patch": "^3.0.0-1"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
