--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 # Disable specific duplicate code since it would introduce more complexity to reduce it.
-sonar.cpd.exclusions=src/standard.ts
+sonar.exclusions=src/standard.ts
