--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "tsc --watch",
     "build": "tsc",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
