--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
+    "docs": "jsdoc2md lib/main.js -f lib/**/*.js > API.md",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -14,7 +15,8 @@
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "get:version": "echo $npm_package_version",
     "get:name": "echo $npm_package_name",
-    "generate:assets": "npm run build",
+    "generate:readme:toc": "markdown-toc -i README.md",
+    "generate:assets": "npm run build && npm run docs && npm run generate:readme:toc",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "semantic-release"
   },
@@ -51,6 +53,8 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.8.0-125",
     "jest": "^27.0.4",
+    "jsdoc-to-markdown": "^7.0.1",
+    "markdown-toc": "^1.2.0",
     "semantic-release": "^17.4.3",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
