add `files` in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "AsyncDiff is a library which compares two AsyncAPI Documents and provides information about the differences by pointing out explicitly informations like breaking changes.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "files": [
+    "/lib",
+    "./README.md",
+    "./LICENSE"
+  ],
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
