--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
-    "docs": "jsdoc2md --files src/*.ts --configure ./jsdoc2md.json > API.md",
+    "docs": "jsdoc2md lib/index.js -f lib/*.js > API.md",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -45,10 +45,6 @@
   },
   "devDependencies": {
     "@asyncapi/parser": "^1.13.1",
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
@@ -63,7 +59,6 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.8.0-125",
     "jest": "^27.0.4",
-    "jsdoc-babel": "^0.5.0",
     "jsdoc-to-markdown": "^7.0.1",
     "markdown-toc": "^1.2.0",
     "semantic-release": "^17.4.3",
