--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "homepage": "https://github.com/asyncapi/diff#readme",
   "dependencies": {
-    "fast-json-patch": "^3.0.0-1"
+    "fast-json-patch": "^3.0.0-1",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@asyncapi/parser": "^1.13.1",
@@ -50,6 +51,7 @@
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.23",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
