--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
-    "docs": "jsdoc2md lib/index.js -f lib/*.js --configure ./jsdoc.conf.json > API.md",
+    "docs": "typedoc --options typedoc.json",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -59,11 +59,11 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.8.0-125",
     "jest": "^27.0.4",
-    "jsdoc-to-markdown": "^7.0.1",
-    "jsdoc-tsimport-plugin": "^1.0.5",
     "markdown-toc": "^1.2.0",
     "semantic-release": "^17.4.3",
     "ts-jest": "^27.0.3",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.12",
     "typescript": "^4.3.2"
   },
   "publishConfig": {
