--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
-    "docs": "typedoc --options typedoc.json",
+    "docs": "typedoc --entryPointStrategy expand --options typedoc.json",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -64,6 +64,7 @@
     "ts-jest": "^27.0.3",
     "typedoc": "^0.22.11",
     "typedoc-plugin-markdown": "^3.11.12",
+    "typedoc-plugin-rename-defaults": "^0.4.0",
     "typescript": "^4.3.2"
   },
   "publishConfig": {
