--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,4 +5,4 @@
 # For more details, read the following article on GitHub: https://help.github.com/articles/about-codeowners/.
 
 # The default owners are automatically added as reviewers when you open a pull request unless different owners are specified in the file.
-* @aayushmau5 @vinitshahdeo @onbit-syn @magicmatatjahu @derberg @github-actions[bot]
+* @aayushmau5 @vinitshahdeo @onbit-syn @magicmatatjahu @derberg @asyncapi-bot-eve
