--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "homepage": "https://github.com/asyncapi/diff#readme",
   "dependencies": {
     "fast-json-patch": "^3.0.0-1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "json2md": "^1.12.0"
   },
   "devDependencies": {
     "@asyncapi/parser": "^1.15.0",
@@ -52,6 +53,7 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.5",
+    "@types/json2md": "^1.5.1",
     "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
