change owner in config file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "diff",
-  "projectOwner": "aayushmau5",
+  "projectOwner": "asyncapi",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
